
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_trabalho">
    <TextView
        android:id="@+id/textPremiado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/textPremiado"/>
    <RadioGroup
        android:id="@+id/radioPremiado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPremiado"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radioSim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textSim"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/radioNao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textNao"/>
    </RadioGroup>
    <TextView
        android:id="@+id/textComo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioPremiado"
        android:layout_alignParentLeft="true"
        android:text="@string/textComo"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/checkMelhor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textComo"
        android:layout_toRightOf="@+id/textComo"
        android:text="@string/textMelhor"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/checkMencao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkMelhor"
        android:layout_alignLeft="@id/checkMelhor"
        android:text="@string/textMencao"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/textJustifique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkMencao"
        android:text="@string/textJustifique"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/checkClareza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textJustifique"
        android:layout_alignLeft="@id/checkMelhor"
        android:text="@string/textClareza"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/checkPesquisador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkClareza"
        android:layout_alignLeft="@id/checkMelhor"
        android:text="@string/textPesquisador"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/checkRelevancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkPesquisador"
        android:layout_alignLeft="@id/checkMelhor"
        android:text="@string/textRelevancia"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/checkCritica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkRelevancia"
        android:layout_alignLeft="@id/checkMelhor"
        android:text="@string/textCritica"
        android:visibility="gone"/>
    <CheckBox
        android:id="@+id/checkOutro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkCritica"
        android:layout_alignLeft="@id/checkMelhor"
        android:layout_marginRight="@dimen/fieldSeparator"
        android:text="@string/textOutro"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/editOutro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkOutro"
        android:layout_toRightOf="@+id/checkOutro"
        android:enabled="false"
        android:visibility="gone"/>
</RelativeLayout>