<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layoutLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/fieldSeparator"
            android:text="@string/labelDummy" />

        <TextView
            android:id="@+id/textValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valueDummy" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seekMin" />

        <!--<SeekBar-->
            <!--android:id="@+id/seekNota"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:max="@integer/defaultCriterioMax" />-->
        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/ratingNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/colorGolden"
            android:max="@integer/defaultCriterioMax"
            android:stepSize="@integer/defaultCriterioStep"
            android:numStars="@integer/defaultCriterioMax"
            />

        <TextView
            android:id="@+id/textMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seekMax" />
    </LinearLayout>

</RelativeLayout>