<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activityHorizontalMargin"
    android:paddingRight="@dimen/activityHorizontalMargin"
    android:paddingBottom="@dimen/activityVerticalMargin"
    android:paddingTop="@dimen/activityVerticalMargin"
    android:onClick="hideKeyboard"
    tools:context=".view.TrabalhoActivity">
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/trabTitulo"
        android:textSize="@dimen/tituloSize"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <View
        android:id="@+id/viewDividerTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividerHeight"
        android:layout_below="@+id/textTitle"
        android:layout_marginTop="@dimen/dividerMargin"
        android:layout_marginBottom="@dimen/dividerMargin"
        android:background="#000000"/>
    <TextView
        android:id="@+id/textInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/viewDividerTitle"
        android:layout_marginBottom="@dimen/headerSeparator"
        android:text="@string/trabInfo"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textAutorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInfo"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="@dimen/labelMargin"
        android:text="@string/autorPrincipal"/>
    <TextView
        android:id="@+id/textAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textAutorLabel"
        android:layout_toRightOf="@+id/textAutorLabel"
        android:text="@string/autorPrincipal"/>
    <TextView
        android:id="@+id/textApresLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAutorLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="@dimen/labelMargin"
        android:text="@string/nomeApresentador"/>
    <TextView
        android:id="@+id/textApres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textApresLabel"
        android:layout_toRightOf="@+id/textApresLabel"
        android:text="@string/nomeApresentador"/>
    <View
        android:id="@+id/viewDividerHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividerHeight"
        android:layout_below="@+id/textApresLabel"
        android:layout_marginTop="@dimen/dividerMargin"
        android:layout_marginBottom="@dimen/dividerMargin"
        android:background="#000000"/>
    <ScrollView
        android:id="@+id/layoutScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/viewDividerHeader"
        android:layout_above="@+id/layoutButtons">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/layoutCriterios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
            <View
                android:id="@+id/viewDividerVotos"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dividerHeight"
                android:layout_marginTop="@dimen/dividerMargin"
                android:layout_marginBottom="@dimen/dividerMargin"
                android:background="#000000"/>
            <include
                android:id="@+id/mainContent"
                layout="@layout/content_premiado"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <Button
            android:id="@+id/buttonSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvarVoto"
            android:onClick="votar"/>
        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelar"
            android:text="@string/cancelar"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textConnecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/progressSeparator"
        android:visibility="gone"
        android:text="@string/waiting"
        android:textColor="@color/colorPrimary"/>
    <ProgressBar
        android:id="@+id/progressConnecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/textConnecting"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/custom_swaped_progress_bar"/>
</RelativeLayout>
