<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="@dimen/progressSeparator"
    android:padding="@dimen/rowPadding"
    android:layout_height="wrap_content">
    <!--A Imagem precisa ficar no comeco para se manter atras do texto.-->
    <!--<android.support.v7.widget.AppCompatImageView-->
        <!--android:id="@+id/imageVoted"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_alignTop="@+id/textIdLabel"-->
        <!--android:layout_alignBottom="@+id/textAutorLabel"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:foregroundGravity="center_vertical"-->
        <!--android:alpha="0.5"-->
        <!--android:src="@drawable/checked_icon"-->
        <!--android:visibility="invisible"-->
        <!--android:contentDescription="@string/votedSubtitle"/>-->
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageVoted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:foregroundGravity="center_vertical"
        android:alpha="0.5"
        android:src="@drawable/checked_icon"
        android:visibility="invisible"
        android:contentDescription="@string/votedSubtitle"/>

    <TextView
        android:id="@+id/textIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="@dimen/labelMargin"
        android:text="@string/idTrabalho"
        android:textColor="@color/secondTextColor"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textIdLabel"
        android:layout_marginBottom="@dimen/fieldSeparator"
        android:layout_alignBaseline="@+id/textIdLabel"
        android:layout_toLeftOf="@+id/imageVoted"
        android:textColor="@color/secondTextColor"/>
    <TextView
        android:id="@+id/textTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textId"
        android:layout_marginRight="@dimen/labelMargin"
        android:text="@string/titulo"
        android:textColor="@color/secondTextColor"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textTitleLabel"
        android:layout_marginBottom="@dimen/fieldSeparator"
        android:layout_alignBaseline="@+id/textTitleLabel"
        android:layout_toLeftOf="@+id/imageVoted"
        android:textColor="@color/secondTextColor"/>
    <TextView
        android:id="@+id/textAutorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textTitle"
        android:layout_marginRight="@dimen/labelMargin"
        android:text="@string/autorPrincipal"
        android:textColor="@color/secondTextColor"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textAutorLabel"
        android:layout_alignBaseline="@+id/textAutorLabel"
        android:layout_toLeftOf="@+id/imageVoted"
        android:textColor="@color/secondTextColor"/>


</RelativeLayout>